<resources>
    <!-- General -->
    <string name="app_name">小管家</string>

    <!-- Toolbar titles -->
    <string name="toolbar_title_home">天王盖地虎</string>
    <string name="toolbar_title_cart">窗帘控制</string>
    <string name="toolbar_title_infra">红外感应</string>
    <string name="toolbar_title_monitor">视频监控</string>
    <string name="toolbar_title_config">配置</string>
    <string name="toolbar_title_about">关于</string>



    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_switch">开关</string>
    <string name="nav_drawer_item_cart">窗帘</string>
    <string name="nav_drawer_item_infra">红外</string>
    <string name="nav_drawer_item_monitor">监控</string>
    <string name="nav_drawer_item_config">配置</string>
    <string name="nav_drawer_about">关于</string>

    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>

    <string name="tools_text_logo">天王盖地虎 宝塔镇河妖</string>

    <string name="start_voice">Click the button below and start speaking</string>

    <string-array name="light_names">
        <item>次卫灯</item>
        <item>主卫灯</item>
        <item>书房灯</item>
        <item>衣帽灯</item>
        <item>主卧灯</item>
        <item>次卧灯</item>
        <item>客厅灯</item>
        <item>沙发灯</item>
        <item>吧台灯</item>
        <item>入门灯</item>
        <item>门前灯</item>
        <item>门厅灯</item>
        <item>过渡灯</item>
        <item>餐厅灯</item>
        <item>走廊灯</item>
        <item>厨房灯</item>
        <item>阳台灯</item>
    </string-array>

    <string-array name="cart_names">
        <item>客厅</item>
        <item>餐厅</item>
        <item>次卫</item>
        <item>主卫</item>
        <item>主卧</item>
        <item>次卧</item>
        <item>书房</item>
    </string-array>

    <string-array name="infra_names">
        <item>客厅</item>
        <item>入门</item>
        <item>走廊</item>
        <item>主卧</item>
        <item>次卧</item>
        <item>书房</item>
    </string-array>


    <string-array name="config_names">
        <item>人体感应电源</item>
        <item>入门       </item>
        <item>走廊</item>
        <item>主卧</item>
        <item>次卧</item>
        <item>书房</item>
    </string-array>

    <string name="speak">Speak Now</string>

    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="setting">设置</string>


    <string name="infile_default"></string>
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/baidu/android/voicedemo/8k_test.pcm, 8k采样的测试音频</item>
        <item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
    </string-array>

    <string name="sample_default"></string>
    <string-array name="sample_list">
        <item>@string/sample_default</item>
        <item>8000, 适用于2G或3G网络</item>
        <item>16000, 适用于4G或WIFI网络</item>
    </string-array>

    <string name="language_default"></string>
    <string-array name="language">
        <item>@string/language_default</item>
        <item>cmn-Hans-CN, 普通话(中国)</item>
        <item>sichuan-Hans-CN, 四川(中国)</item>
        <item>yue-Hans-CN, 粤语(中国)</item>
        <item>en-GB, 英语(美国)</item>
    </string-array>

    <string name="nlu_default"></string>
    <string-array name="nlu_list">
        <item>@string/nlu_default</item>
        <item>disable, 禁用语义解析</item>
        <item>enable, 开启语义解析</item>
    </string-array>

    <string name="vad_default"></string>
    <string-array name="vad_list">
        <item>@string/vad_default</item>
        <item>search, 适用输入搜索关键字(默认值)</item>
        <item>input, 适用于输入短信、微博等长句输入</item>
    </string-array>
    <string name="prop_default"></string>
    <string-array name="prop_tpye">
        <item>@string/prop_default</item>
        <item>20000, 输入</item>
        <item>10005, 热词</item>
        <item>10060, 地图</item>
        <item>10001, 音乐</item>
        <item>10002, 视频</item>
        <item>10003, 应用</item>
        <item>10004, 网页</item>
        <item>10007, 健康</item>
        <item>10006, 购物</item>
        <item>10008, 打电话</item>
        <item>10008, 超级电话</item>
        <item>10052, 医疗</item>
        <item>10053, 汽车</item>
        <item>10054, 娱乐餐饮</item>
        <item>10055, 财经</item>
        <item>10056, 游戏</item>
        <item>10057, 菜谱</item>
        <item>10058, 助手</item>
        <item>100014, 联系人</item>
        <item>100016, 手机设置</item>
        <item>100018, 电视指令</item>
        <item>100019, 播放器指令</item>
        <item>100020, 收音机指令</item>
        <item>100021, 命令词</item>
    </string-array>
</resources>
