<?xml version="1.0" encoding="utf-8"?>

<cn.laojing.smarthome.SutFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_navigation_drawer_rootLayout"
    style="@style/ScrimInsetsLayout"
    tools:context=".MainActivity"
    tools:layout_marginEnd="?actionBarSize"
    tools:layout_marginRight="?actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/navigation_drawer_account_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?selectableItemBackground">

            <FrameLayout
                android:foreground="@color/black_alpha_50"
                app:layout_aspectRatio="178%"
                app:layout_widthPercent="100%">

                <ImageView
                    android:id="@+id/navigation_drawer_user_account_picture_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/account"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/navigation_drawer_account_section"
                android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
                android:paddingEnd="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingLeft="@dimen/nav_drawer_vertical_keyline_icon_left"
                android:paddingRight="@dimen/nav_drawer_vertical_keyline_right"
                android:paddingStart="@dimen/nav_drawer_vertical_keyline_icon_left"
                app:layout_aspectRatio="178%"
                app:layout_widthPercent="100%">

                <LinearLayout
                    android:id="@+id/navigation_drawer_account_information"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_display_name"
                        style="@style/Body2.White.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tools_text_logo" />

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/navigation_drawer_user_account_picture_profile"
                    android:layout_width="@dimen/nav_drawer_profile_image_size"
                    android:layout_height="@dimen/nav_drawer_profile_image_size"
                    android:layout_above="@id/navigation_drawer_account_information"
                    android:src="@drawable/ic_account_circle_64dp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

        </android.support.percent.PercentRelativeLayout>

        <!-- Drawer items -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/navigation_drawer_background"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
            android:paddingTop="@dimen/nav_drawer_vertical_spacing_listing">

            <LinearLayout
                android:id="@+id/navigation_drawer_linearLayout_entries_root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_switch"
                    style="@style/NavDrawerRowLayout.Main"
                    tools:background="@color/nav_drawer_row_item_selected">

                    <ImageView
                        android:id="@+id/navigation_drawer_items_list_icon_switch"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/menu_lightclose"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_switch"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_switch"
                        tools:textColor="@color/nav_drawer_item_text_selected" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_cart"
                    style="@style/NavDrawerRowLayout.Main"
                    tools:background="@color/nav_drawer_row_item_selected">

                    <ImageView
                        android:id="@+id/navigation_drawer_items_list_icon_cart"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/menu_cartclose"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_cart"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_cart"
                        tools:textColor="@color/nav_drawer_item_text_selected" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_infra"
                    style="@style/NavDrawerRowLayout.Main"
                    tools:background="@color/nav_drawer_row_item_selected">

                    <ImageView
                        android:id="@+id/navigation_drawer_items_list_icon_infra"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/menu_infraclose"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_infra"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_infra"
                        tools:textColor="@color/nav_drawer_item_text_selected" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_monitor"
                    style="@style/NavDrawerRowLayout.Main"
                    tools:background="@color/nav_drawer_row_item_selected">

                    <ImageView
                        android:id="@+id/navigation_drawer_items_list_icon_monitor"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/menu_monitor"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_monitor"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_monitor"
                        tools:textColor="@color/nav_drawer_item_text_selected" />

                </FrameLayout>



                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_config"
                    style="@style/NavDrawerRowLayout.Main"
                    tools:background="@color/nav_drawer_row_item_selected">

                    <ImageView
                        android:id="@+id/navigation_drawer_items_list_icon_config"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/menu_config"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_config"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_item_config"
                        tools:textColor="@color/nav_drawer_item_text_selected" />

                </FrameLayout>



                <include
                    layout="@layout/navigation_drawer_divider"/>

                <FrameLayout
                    android:id="@+id/navigation_drawer_items_list_linearLayout_about"
                    style="@style/NavDrawerRowLayout.Main"
                    tools:background="@color/nav_drawer_row_item_selected">

                    <ImageView
                        android:id="@+id/navigation_drawer_items_list_icon_about"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_info_24dp"
                        android:tint="@color/text_black_secondary_icon_54"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_about"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/nav_drawer_about" />

                </FrameLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</cn.laojing.smarthome.SutFrameLayout>